kubernetes/order-management-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: order-management-service
  name: order-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order-management-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: order-management-service
    spec:
      containers:
        - env:
            - name: KAFKA_BROKER
              value: kafka:9092
            - name: MONGO_URI
              value: mongodb+srv://dineth550:20021213@studentms.q45in7h.mongodb.net/order_db
          image: us-central1-docker.pkg.dev/food-delivery-system-458116/my-repo/order-management-service:latest
          name: order-management-service
          ports:
            - containerPort: 3003
              protocol: TCP
      restartPolicy: Always
