kubernetes/restaurant-management-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: restaurant-management-service
  name: restaurant-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: restaurant-management-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: restaurant-management-service
    spec:
      containers:
        - env:
            - name: KAFKA_BROKER
              value: kafka:9092
            - name: MONGO_URI
              value: mongodb+srv://vishwakaushalya2003:vishwa2003@cluster0.xfi4t.mongodb.net/restaurent_db?retryWrites=true&w=majority&appName=Cluster0
          image: us-central1-docker.pkg.dev/food-delivery-system-458116/my-repo/restaurant-management-service:latest
          name: restaurant-management-service
          ports:
            - containerPort: 3002
              protocol: TCP
      restartPolicy: Always
