kubernetes/delivery-management-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: delivery-management-service
  name: delivery-management-service
spec:
  ports:
    - name: "3004"
      port: 3004
      targetPort: 3004
  selector:
    io.kompose.service: delivery-management-service
