kubernetes/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: notification-service
  name: notification-service
spec:
  ports:
    - name: "3006"
      port: 3006
      targetPort: 3006
  selector:
    io.kompose.service: notification-service
