kubernetes/order-management-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: order-management-service
  name: order-management-service
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
  selector:
    io.kompose.service: order-management-service
