kubernetes/payment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: payment-service
  name: payment-service
spec:
  ports:
    - name: "3005"
      port: 3005
      targetPort: 3005
  selector:
    io.kompose.service: payment-service
