kubernetes/restaurant-management-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: restaurant-management-service
  name: restaurant-management-service
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    io.kompose.service: restaurant-management-service
