kubernetes/user-management-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: user-management-service
  name: user-management-service
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    io.kompose.service: user-management-service
